--- a/A_la_Francaise.html
+++ b/A_la_Francaise.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -19,8 +19,8 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2? family = Roboto: wght @ 300 & display = swap"
-      rel="feuille de style"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;1,300&display=swap"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
@@ -55,9 +55,9 @@
         </div>
       </div>
       <section class="menu__plats">
-        <articles class="menu__details">
+        <div class="menu__details">
           <h2 class="sub__title">Entrées</h2>
-          <hgroup class="menu__text fade-1">
+          <div class="menu__text fade-1">
             <div class="menu__title__price">
               <span class="prod">Tartare de poulpe acidulé </span>
               <h4>Aux zestes d'orange</h4>
@@ -70,8 +70,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-2">
+          </div>
+          <div class="menu__text fade-2">
             <div class="menu__title__price">
               <span class="prod"> Velouté de légumes d'antan </span>
               <h4>Carotte, panais, topinambour</h4>
@@ -84,8 +84,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-3">
+          </div>
+          <div class="menu__text fade-3">
             <div class="menu__title__price">
               <span class="prod">Soupe à l'oignon </span>
               <h4>Revisitée</h4>
@@ -98,11 +98,11 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-        </articles>
-        <articles class="menu__details">
+          </div>
+        </div>
+        <div class="menu__details">
           <h2 class="sub__title">Plats</h2>
-          <hgroup class="menu__text fade-5">
+          <div class="menu__text fade-5">
             <div class="menu__title__price">
               <span class="prod">Coquilles Saint-Jacques</span>
               <h4>Accompagnées d'une purée de panais</h4>
@@ -115,8 +115,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-6">
+          </div>
+          <div class="menu__text fade-6">
             <div class="menu__title__price">
               <span class="prod"> Magret de canard</span>
               <h4>Et parmentier de pommes de terre</h4>
@@ -129,8 +129,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-7">
+          </div>
+          <div class="menu__text fade-7">
             <div class="menu__title__price">
               <span class="prod">Pigeonneau d’Ille-et-Vilaine</span>
               <h4>Sur son lit de gnocchis aux légumes</h4>
@@ -143,11 +143,11 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-        </articles>
-        <articles class="menu__details">
+          </div>
+        </div>
+        <div class="menu__details">
           <h2 class="sub__title">Desserts</h2>
-          <hgroup class="menu__text fade-8">
+          <div class="menu__text fade-8">
             <div class="menu__title__price">
               <span class="prod">Pétales de violettes glacés</span>
               <h4>Et purée de noisettes</h4>
@@ -160,8 +160,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-9">
+          </div>
+          <div class="menu__text fade-9">
             <div class="menu__title__price">
               <span class="prod"> Fondant au chocolat </span>
               <h4>Revisitér</h4>
@@ -174,8 +174,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-10">
+          </div>
+          <div class="menu__text fade-10">
             <div class="menu__title__price">
               <span class="prod">Millefeuille croustillant</span>
               <h4>Myrtilles et pâte d’amande</h4>
@@ -188,8 +188,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-        </articles>
+          </div>
+        </div>
         <div class="command-btn fade-11">
           <a href="" class="reserve__btn-1 btn-2"> Commander </a>
         </div>
@@ -215,7 +215,7 @@
               </a>
             </li>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="mailto:test@test.local">Contact</a></li>
           </ul>
         </div>
       </div>
