--- a/La_note_enchantee.html
+++ b/La_note_enchantee.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,9 +18,10 @@
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2? family = Roboto: wght @ 300 & display = swap"
-      rel="feuille de style"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;1,300&display=swap"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
@@ -56,9 +57,9 @@
         </div>
       </div>
       <section class="menu__plats">
-        <articles class="menu__details">
+        <div class="menu__details">
           <h2 class="sub__title">Entrées</h2>
-          <hgroup class="menu__text fade-1">
+          <div class="menu__text fade-1">
             <div class="menu__title__price">
               <span class="prod">Ravioles de foie gras </span>
               <h4>Accompagnés de leur crème à la truffe</h4>
@@ -71,8 +72,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-2">
+          </div>
+          <div class="menu__text fade-2">
             <div class="menu__title__price">
               <span class="prod"> Caviar osciètre</span>
               <h4>Sur blini à la farine de blé noir</h4>
@@ -85,8 +86,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-3">
+          </div>
+          <div class="menu__text fade-3">
             <div class="menu__title__price">
               <span class="prod">Homard et espuma de potiron </span>
               <h4>Mariné aux zestes d'orange</h4>
@@ -99,8 +100,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-3">
+          </div>
+          <div class="menu__text fade-3">
             <div class="menu__title__price">
               <span class="prod">Foie gras de canard cuit entier </span>
               <h4>Confiture de figue et pain toasté</h4>
@@ -113,11 +114,11 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-        </articles>
-        <articles class="menu__details">
+          </div>
+        </div>
+        <div class="menu__details">
           <h2 class="sub__title">Plats</h2>
-          <hgroup class="menu__text fade-5">
+          <div class="menu__text fade-5">
             <div class="menu__title__price">
               <span class="prod">Noix de coquilles Saint-Jacques </span>
               <h4>Sur lit de purée de céleri-rave</h4>
@@ -130,8 +131,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-6">
+          </div>
+          <div class="menu__text fade-6">
             <div class="menu__title__price">
               <span class="prod"> Langoustine poêlée </span>
               <h4>Purée de patate douce</h4>
@@ -144,8 +145,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-7">
+          </div>
+          <div class="menu__text fade-7">
             <div class="menu__title__price">
               <span class="prod">Mijoté de queue de boeuf </span>
               <h4>Et riz sauvage aux zestes de citron</h4>
@@ -158,11 +159,11 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-        </articles>
-        <articles class="menu__details">
+          </div>
+        </div>
+        <div class="menu__details">
           <h2 class="sub__title">Desserts</h2>
-          <hgroup class="menu__text fade-8">
+          <div class="menu__text fade-8">
             <div class="menu__title__price">
               <span class="prod">Macaron noisette et chocolat </span>
               <h4>Glace au caramel brun et sel de Guérande</h4>
@@ -175,8 +176,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-9">
+          </div>
+          <div class="menu__text fade-9">
             <div class="menu__title__price">
               <span class="prod"> Baba au rhum revisité </span>
               <h4>Avec son coulis de citron</h4>
@@ -189,8 +190,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-10">
+          </div>
+          <div class="menu__text fade-10">
             <div class="menu__title__price">
               <span class="prod">Tarte au citron meringuée </span>
               <h4>Déstructurée</h4>
@@ -203,8 +204,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-        </articles>
+          </div>
+        </div>
         <div class="command-btn fade-11">
           <a href="" class="reserve__btn-1 btn-2"> Commander </a>
         </div>
@@ -231,7 +232,7 @@
               </a>
             </li>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="mailto:test@test.local">Contact</a></li>
           </ul>
         </div>
       </div>
