--- a/La_palette_du_gout.html
+++ b/La_palette_du_gout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,9 +18,10 @@
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2? family = Roboto: wght @ 300 & display = swap"
-      rel="feuille de style"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;1,300&display=swap"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
@@ -55,9 +56,9 @@
         </div>
       </div>
       <section class="menu__plats">
-        <articles class="menu__details">
+        <div class="menu__details">
           <h2 class="sub__title">Entrées</h2>
-          <hgroup class="menu__text fade-1">
+          <div class="menu__text fade-1">
             <div class="menu__title__price">
               <span class="prod">Fricassée d'escargot </span>
               <h4>Au piment d'Espelette</h4>
@@ -70,8 +71,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-2">
+          </div>
+          <div class="menu__text fade-2">
             <div class="menu__title__price">
               <span class="prod"> Foie gras de canard mi-cuit </span>
               <h4>Et ses copeaux de truffe noire</h4>
@@ -84,8 +85,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-3">
+          </div>
+          <div class="menu__text fade-3">
             <div class="menu__title__price">
               <span class="prod">Oeuf au plat </span>
               <h4>Assaisonné à la truffe sur lit de caviar</h4>
@@ -98,11 +99,11 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-        </articles>
-        <articles class="menu__details">
+          </div>
+        </div>
+        <div class="menu__details">
           <h2 class="sub__title">Plats</h2>
-          <hgroup class="menu__text fade-5">
+          <div class="menu__text fade-5">
             <div class="menu__title__price">
               <span class="prod">Filet de boeuf aux herbes </span>
               <h4>Accompagné de sa ribambelle de légumes</h4>
@@ -115,8 +116,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-6">
+          </div>
+          <div class="menu__text fade-6">
             <div class="menu__title__price">
               <span class="prod"> Parmentier de queue de boeuf </span>
               <h4>À la truffe noire sur sa purée de panais</h4>
@@ -129,8 +130,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-7">
+          </div>
+          <div class="menu__text fade-7">
             <div class="menu__title__price">
               <span class="prod">Filet de turbot </span>
               <h4>Aux agrumes</h4>
@@ -143,11 +144,11 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-        </articles>
-        <articles class="menu__details">
+          </div>
+        </div>
+        <div class="menu__details">
           <h2 class="sub__title">Desserts</h2>
-          <hgroup class="menu__text fade-8">
+          <div class="menu__text fade-8">
             <div class="menu__title__price">
               <span class="prod">Paris-Brest </span>
               <h4>Revisité</h4>
@@ -160,8 +161,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-9">
+          </div>
+          <div class="menu__text fade-9">
             <div class="menu__title__price">
               <span class="prod"> Macaron au chocolat d'exception </span>
               <h4>Et glace à la vanille de Madagascar</h4>
@@ -174,8 +175,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-10">
+          </div>
+          <div class="menu__text fade-10">
             <div class="menu__title__price">
               <span class="prod">Mousse au chocolat </span>
               <h4>Au piment d'Espelette et à la truffe noire</h4>
@@ -188,8 +189,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-        </articles>
+          </div>
+        </div>
         <div class="command-btn fade-11">
           <a href="" class="reserve__btn-1 btn-2"> Commander </a>
         </div>
@@ -215,7 +216,7 @@
               </a>
             </li>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="mailto:test@test.local">Contact</a></li>
           </ul>
         </div>
       </div>
