--- a/Le_delice_des_sens.html
+++ b/Le_delice_des_sens.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,9 +18,10 @@
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2? family = Roboto: wght @ 300 & display = swap"
-      rel="feuille de style"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;1,300&display=swap"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
@@ -55,9 +56,9 @@
         </div>
       </div>
       <section class="menu__plats">
-        <articles class="menu__details">
+        <div class="menu__details">
           <h2 class="sub__title">Entrées</h2>
-          <hgroup class="menu__text fade-1">
+          <div class="menu__text fade-1">
             <div class="menu__title__price">
               <span class="prod">Tartare de thon</span>
               <h4>Assaisonné au yuzu</h4>
@@ -70,8 +71,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-2">
+          </div>
+          <div class="menu__text fade-2">
             <div class="menu__title__price">
               <span class="prod"> Bouchée de homard croustillant </span>
               <h4>Et sa farandole de petits légumes</h4>
@@ -84,8 +85,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-3">
+          </div>
+          <div class="menu__text fade-3">
             <div class="menu__title__price">
               <span class="prod">Velouté de cèpes </span>
               <h4>Aux truffes</h4>
@@ -98,11 +99,11 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-        </articles>
-        <articles class="menu__details">
+          </div>
+        </div>
+        <div class="menu__details">
           <h2 class="sub__title">Plats</h2>
-          <hgroup class="menu__text fade-5">
+          <div class="menu__text fade-5">
             <div class="menu__title__price">
               <span class="prod">Poulet rôti aux herbes de Provence </span>
               <h4>Et sa crème de truffe</h4>
@@ -115,8 +116,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-6">
+          </div>
+          <div class="menu__text fade-6">
             <div class="menu__title__price">
               <span class="prod"> Langouste rôtie </span>
               <h4>Et ses légumes de saison</h4>
@@ -129,8 +130,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-7">
+          </div>
+          <div class="menu__text fade-7">
             <div class="menu__title__price">
               <span class="prod">Côte de boeuf Angus </span>
               <h4>Et sa purée de panais</h4>
@@ -143,11 +144,11 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-        </articles>
-        <articles class="menu__details">
+          </div>
+        </div>
+        <div class="menu__details">
           <h2 class="sub__title">Desserts</h2>
-          <hgroup class="menu__text fade-8">
+          <div class="menu__text fade-8">
             <div class="menu__title__price">
               <span class="prod">Farandole de desserts</span>
               <h4>Du chef</h4>
@@ -160,8 +161,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-9">
+          </div>
+          <div class="menu__text fade-9">
             <div class="menu__title__price">
               <span class="prod"> Crème brulée </span>
               <h4>Revisitée</h4>
@@ -174,8 +175,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-          <hgroup class="menu__text fade-10">
+          </div>
+          <div class="menu__text fade-10">
             <div class="menu__title__price">
               <span class="prod">Tiramisu </span>
               <h4>À la noisette</h4>
@@ -188,8 +189,8 @@
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </hgroup>
-        </articles>
+          </div>
+        </div>
         <div class="command-btn fade-11">
           <a href="" class="reserve__btn-1 btn-2"> Commander </a>
         </div>
@@ -215,7 +216,7 @@
               </a>
             </li>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="mailto:test@test.local">Contact</a></li>
           </ul>
         </div>
       </div>
