--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -21,9 +21,10 @@
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2? family = Roboto: wght @ 300 & display = swap"
-      rel="feuille de style"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;1,300&display=swap"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
@@ -39,7 +40,7 @@
           <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood logo" />
         </a>
       </div>
-      <form action="" class="search__location">
+      <form class="search__location">
         <div class="search__icons">
           <i class="fas fa-map-marker-alt location"></i>
         </div>
@@ -204,7 +205,7 @@
               </a>
             </li>
             <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="mailto:test@test.local">Contact</a></li>
           </ul>
         </div>
       </div>
