Refactoring and finish work

--- a/La_palette_du_gout.html
+++ b/La_palette_du_gout.html
@@ -56,22 +56,19 @@
         </div>
       </div>
       <section class="menu__plats">
-        <div class="menu__details">
           <h2 class="sub__title">Entrées</h2>
-          <div class="menu__text fade-1">
-            <div class="menu__title__price">
-              <span class="prod">Fricassée d'escargot </span>
+          <article class="menu__text fade-1">
+            <hgroup class="menu__title__price">
+              <h3 class="prod">Fricassée d'escargot</h3>
               <h4>Au piment d'Espelette</h4>
-            </div>
+            </hgroup>
             <div class="price__container">
-              <div class="price">
-                <span>25€</span>
-              </div>
+              <span>25€</span>
             </div>
             <div class="checkbox">
               <i class="fas fa-check-circle btn-circle"></i>
             </div>
-          </div>
+          </article>
           <div class="menu__text fade-2">
             <div class="menu__title__price">
               <span class="prod"> Foie gras de canard mi-cuit </span>
