--- a/index.html
+++ b/index.html
@@ -89,98 +89,90 @@
         <div class="store">
           <h2 class="store__title fade-4">Restaurants</h2>
           <article class="store__card">
-            <figure class="store__img__header fade-5">
-              <img
-                src="images/restaurants/palette.jpg"
-                alt="La palette du goût"
-                class="cart__img"
-              />
-              <figcaption class="img-btn-left">Nouveau</figcaption>
-            </figure>
-            <header class="store__contain">
-              <hgroup>
-                <h3>
-                  <a href="La_palette_du_gout.html" class="strong"
-                    >La palette du goût</a
-                  >
-                </h3>
-                <h4 class="subtitle">Menilmontant</h4>
-              </hgroup>
-              <div class="like">
-                <i class="far fa-heart default-icon"></i>
-                <i class="fas fa-heart hover-icon"></i>
-              </div>
-            </header>
+            <a href="La_palette_du_gout.html">
+              <figure class="store__img__header fade-5">
+                <img
+                  src="images/restaurants/palette.jpg"
+                  alt="La palette du goût"
+                  class="cart__img"
+                />
+                <figcaption class="img-btn-left">Nouveau</figcaption>
+              </figure>
+              <header class="store__contain">
+                <hgroup>
+                  <h3 class="strong">La palette du goût</h3>
+                  <h4 class="subtitle">Menilmontant</h4>
+                </hgroup>
+                <div class="like">
+                  <i class="far fa-heart default-icon"></i>
+                  <i class="fas fa-heart hover-icon"></i>
+                </div>
+              </header>
+            </a>
           </article>
           <article class="store__card">
-            <figure class="store__img__header fade-6">
-              <img
-                src="images/restaurants/note.jpg"
-                alt="La note enchantée"
-                class="cart__img"
-              />
-              <figcaption class="img-btn-left">Nouveau</figcaption>
-            </figure>
-            <header class="store__contain">
-              <hgroup>
-                <h3>
-                  <a href="La_note_enchantee.html" class="strong"
-                    >La note enchantée</a
-                  >
-                </h3>
-                <h4 class="subtitle">Charonne</h4>
-              </hgroup>
-              <div class="like">
-                <i class="far fa-heart default-icon"></i>
-                <i class="fas fa-heart hover-icon"></i>
-              </div>
-            </header>
+            <a href="La_note_enchantee.html">
+              <figure class="store__img__header fade-6">
+                <img
+                  src="images/restaurants/note.jpg"
+                  alt="La note enchantée"
+                  class="cart__img"
+                />
+                <figcaption class="img-btn-left">Nouveau</figcaption>
+              </figure>
+              <header class="store__contain">
+                <hgroup>
+                  <h3 class="strong">La note enchantée</h3>
+                  <h4 class="subtitle">Charonne</h4>
+                </hgroup>
+                <div class="like">
+                  <i class="far fa-heart default-icon"></i>
+                  <i class="fas fa-heart hover-icon"></i>
+                </div>
+              </header>
+            </a>
           </article>
           <article class="store__card">
-            <figure class="store__img__header fade-7">
-              <img
-                src="images/restaurants/francaise.jpg"
-                alt="A la francaise"
-                class="cart__img"
-              />
-            </figure>
-            <header class="store__contain">
-              <hgroup>
-                <h3>
-                  <a href="A_la_Francaise.html" class="strong"
-                    >A la française</a
-                  >
-                </h3>
-                <h4 class="subtitle">Cité Rouge</h4>
-              </hgroup>
-              <div class="like">
-                <i class="far fa-heart default-icon"></i>
-                <i class="fas fa-heart hover-icon"></i>
-              </div>
-            </header>
+            <a href="A_la_Francaise.html">
+              <figure class="store__img__header fade-7">
+                <img
+                  src="images/restaurants/francaise.jpg"
+                  alt="A la francaise"
+                  class="cart__img"
+                />
+              </figure>
+              <header class="store__contain">
+                <hgroup>
+                  <h3 class="strong">A la française</h3>
+                  <h4 class="subtitle">Cité Rouge</h4>
+                </hgroup>
+                <div class="like">
+                  <i class="far fa-heart default-icon"></i>
+                  <i class="fas fa-heart hover-icon"></i>
+                </div>
+              </header>
+            </a>
           </article>
           <article class="store__card">
-            <figure class="store__img__header fade-8">
-              <img
-                src="images/restaurants/delice.jpg"
-                alt="Le délice des sens"
-                class="cart__img"
-              />
-            </figure>
-            <header class="store__contain">
-              <hgroup>
-                <h3>
-                  <a href="Le_delice_des_sens.html" class="strong"
-                    >Le délice des sens</a
-                  >
-                </h3>
-                <h4 class="subtitle">Folie-Méricourt</h4>
-              </hgroup>
-              <div class="like">
-                <i class="far fa-heart default-icon"></i>
-                <i class="fas fa-heart hover-icon"></i>
-              </div>
-            </header>
+            <a href="Le_delice_des_sens.html">
+              <figure class="store__img__header fade-8">
+                <img
+                  src="images/restaurants/delice.jpg"
+                  alt="Le délice des sens"
+                  class="cart__img"
+                />
+              </figure>
+              <header class="store__contain">
+                <hgroup>
+                  <h3 class="strong">Le délice des sens</h3>
+                  <h4 class="subtitle">Folie-Méricourt</h4>
+                </hgroup>
+                <div class="like">
+                  <i class="far fa-heart default-icon"></i>
+                  <i class="fas fa-heart hover-icon"></i>
+                </div>
+              </header>
+            </a>
           </article>
         </div>
       </section>
