--- a/La_palette_du_gout.html
+++ b/La_palette_du_gout.html
@@ -56,6 +56,7 @@
         </div>
       </div>
       <section class="menu__plats">
+        <div class="menu__details">
           <h2 class="sub__title">Entrées</h2>
           <article class="menu__text fade-1">
             <hgroup class="menu__title__price">
@@ -98,6 +99,7 @@
             </div>
           </div>
         </div>
+      </div>
         <div class="menu__details">
           <h2 class="sub__title">Plats</h2>
           <div class="menu__text fade-5">
